--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <p><a href = "https://technoid99.github.io/BeautifyJSON/">Beautify JSON</a></p>
-    <p><a href = "https://technoid99.github.io/XMLtoJSON/">XML to JSON converter</a></p>
+    <p><a href = "https://technoid99.github.io/XMLtoCSV/">XML to CSV converter</a></p>
     <p><a href = "https://technoid99.github.io/XMLtoJSON/">GeoJSON to KML converter</a></p>
     <p><a href = "https://technoid99.github.io/XMLtoJSON/">SHP to KML converter</a></p>
   </body>
