--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <p><a href = "https://technoid99.github.io/BeautifyJSON/">Beautify JSON</a></p>
     <p><a href = "https://technoid99.github.io/XMLtoCSV/">XML to CSV converter</a></p>
-    <p><a href = "https://technoid99.github.io/XMLtoJSON/">GeoJSON to KML converter</a></p>
-    <p><a href = "https://technoid99.github.io/XMLtoJSON/">SHP to KML converter</a></p>
+    <p><a href = "https://technoid99.github.io/geojsontokml/">GeoJSON to KML converter - broken :(</a></p>
+    <p><a href = "https://technoid99.github.io/XMLtoJSON/">SHP to KML converter - on the way!</a></p>
   </body>
 </html>
