--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <p><a href = "https://technoid99.github.io/XMLtoCSV/">XML to CSV converter</a></p>
     <!--<p><a href = "https://technoid99.github.io/SubcableIncidents/">Submarine cable incidents - under construction</a></p>-->
     <p><a href = "https://technoid99.github.io/usefulprompts/">Useful ChatGPT prompts</a></p>
+    <p><a href = "https://technoid99.github.io/map-joiner/">Map Joiner - Make Australia and the Pacific the centre of your map</p>
   </body>
 </html>
