--- a/index.html
+++ b/index.html
@@ -1,12 +1,117 @@
-<html>
-  <head>
-    <title>technoid99's space on the web</title>
-  </head>
-  <body>
-    <p><a href = "https://technoid99.github.io/BeautifyJSON/">Beautify JSON</a></p>
-    <p><a href = "https://technoid99.github.io/XMLtoCSV/">XML to CSV converter</a></p>
-    <!--<p><a href = "https://technoid99.github.io/SubcableIncidents/">Submarine cable incidents - under construction</a></p>-->
-    <p><a href = "https://technoid99.github.io/usefulprompts/">Useful ChatGPT prompts</a></p>
-    <p><a href = "https://technoid99.github.io/map-joiner/">Map Joiner - Make Australia and the Pacific the centre of your map</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Technoid99's Handy Little Tools</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        h1 {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .container {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            padding: 20px;
+        }
+        .card {
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            width: 300px;
+            padding: 15px;
+            margin: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .card h3 {
+            margin-top: 0;
+        }
+        .card ul {
+            list-style: none;
+            padding-left: 0;
+        }
+        .card ul li {
+            margin: 10px 0;
+        }
+        .card ul li a {
+            text-decoration: none;
+            color: #3498db;
+            font-weight: bold;
+        }
+        .card ul li a:hover {
+            text-decoration: underline;
+        }
+        .done-btn {
+            display: block;
+            width: 100%;
+            text-align: center;
+            background-color: #3498db;
+            color: white;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            margin-top: 10px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .done-btn:hover {
+            background-color: #2980b9;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Technoid99's Handy Little Tools</h1>
+    <h3>with no ads!</h3>
+
+    <div class="container">
+        <div class="card">
+            <h3>Converters</h3>
+            <ul>
+                <li><a href="https://technoid99.github.io/XMLtoCSV/">XML to CSV Converter</a></li>
+                <li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>Beautifier</h3>
+            <ul>
+                <li><a href="https://technoid99.github.io/BeautifyJSON/">JSON Beautifier</a></li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>Maps</h3>
+            <ul>
+                <li><a href = "https://technoid99.github.io/map-joiner/">Map Joiner - Make Australia and the Pacific the centre of your map</a></li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>Prompt engineering</h3>
+            <ul>
+                <li><a href = "https://technoid99.github.io/usefulprompts/">Useful ChatGPT prompts</a></li>
+            </ul>
+        </div>
+
+      <!--
+        <div class="card">
+            <h3>Projects</h3>
+            <ul>
+                <li><a href = "https://technoid99.github.io/SubcableIncidents/">Submarine cable incidents - under construction</a></li>
+            </ul>
+        </div>
+      -->
+      
+    </div>
+
+</body>
 </html>
+
