--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
         <div class="card">
             <h3>Converters</h3>
             <ul>
-                <li><a href="https://technoid99.github.io/XMLtoCSV/">XML to CSV Converter</a></li>
                 <li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
+                <li><a href="https://technoid99.github.io/xlsx-to-csv-converter/convert-xlsx-to-csv.html">XLSX to CSV converter</li>
+                <li><a href="https://technoid99.github.io/XMLtoCSV/">XML to CSV converter</a></li>
             </ul>
         </div>
 
