--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
         }
-        h1 {
+        h1 h3 {
             text-align: center;
             margin-top: 20px;
         }
@@ -82,7 +82,15 @@
         </div>
 
         <div class="card">
-            <h3>Beautifier</h3>
+            <h3>Online Viewers</h3>
+            <ul>
+                <li><a href="https://technoid99.github.io/csv-viewer/view-csv-online.html">view CSV online</a></li>
+            </ul>
+        </div>
+        
+
+        <div class="card">
+            <h3>Text and code beautifiers</h3>
             <ul>
                 <li><a href="https://technoid99.github.io/BeautifyJSON/">JSON Beautifier</a></li>
             </ul>
