--- a/index.html
+++ b/index.html
@@ -73,10 +73,18 @@
 
     <div class="container">
         <div class="card">
+            <h3>Scenarios</h3>
+            <ul>
+                <li>I've downloaded a .docx file from an unverified source. Should I open it? Probably not. But you could try to read it using this <a href="https://technoid99.github.io/docx-viewer/index.html">.docx viewer</a>. Read it as a plain text instead of as HTML. It's safest.</li>
+                <li>I've downloaded a .xlsx file from an unverified source. Should I open it? Probably not. But you could <a href="https://technoid99.github.io/xlsx-to-csv-converter/convert-xlsx-to-csv.html">convert the .xlsx to csv</a> then view it using this <a href="https://technoid99.github.io/csv-viewer/view-csv-online.html">CSV viewer</a></li>
+            </ul>
+        </div>
+        
+        <div class="card">
             <h3>Converters</h3>
             <ul>
                 <li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
-                <li><a href="https://technoid99.github.io/xlsx-to-csv-converter/convert-xlsx-to-csv.html">XLSX to CSV converter</li>
+                <li><a href="https://technoid99.github.io/xlsx-to-csv-converter/convert-xlsx-to-csv.html">XLSX to CSV converter</a></li>
                 <li><a href="https://technoid99.github.io/XMLtoCSV/">XML to CSV converter</a></li>
             </ul>
         </div>
@@ -85,6 +93,7 @@
             <h3>Online Viewers</h3>
             <ul>
                 <li><a href="https://technoid99.github.io/csv-viewer/view-csv-online.html">view CSV online</a></li>
+                <li><a href="https://technoid99.github.io/docx-viewer/index.html">view DOCX online</a></li>
             </ul>
         </div>
         
