--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <h3>Scenarios</h3>
             <ul>
                 <li>* <b>I've downloaded a .docx file from an unverified source. Should I open it?</b> Probably not. But you could try to read it using this <a href="https://technoid99.github.io/docx-viewer/index.html">.docx viewer</a>. Read it as a plain text instead of as HTML. It's safest.</li>
-                <li>* <b>I've downloaded a .xlsx file from an unverified source. Should I open it?</b> Probably not. But you could <a href="https://technoid99.github.io/xlsx-to-csv-converter/convert-xlsx-to-csv.html">convert the .xlsx to csv</a> then view it using this <a href="https://technoid99.github.io/csv-viewer/view-csv-online.html">CSV viewer</a></li>
+                <li>* <b>I've downloaded a .xlsx file from an unverified source. Should I open it?</b> Probably not. But you could <a href="https://technoid99.github.io/xlsx-to-csv-converter/convert-xlsx-to-csv.html">convert the .xlsx to csv</a> then view it using this <a href="https://technoid99.github.io/csv-viewer/view-csv-online.html">csv viewer</a></li>
             </ul>
         </div>
         
