--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <ul>
                 <li>* <b>I've downloaded a .docx file from an unverified source. Should I open it?</b> Probably not. But you could try to read it using this <a href="https://technoid99.github.io/docx-viewer/index.html">.docx viewer</a>. Read it as a plain text instead of as HTML. It's safest.</li>
                 <li>* <b>I've downloaded a .xlsx file from an unverified source. Should I open it?</b> Probably not. But you could <a href="https://technoid99.github.io/xlsx-to-csv-converter/convert-xlsx-to-csv.html">convert the .xlsx to csv</a> then view it using this <a href="https://technoid99.github.io/csv-viewer/view-csv-online.html">csv viewer</a></li>
-                <li>* <b>I want a webpage the latest news/posts from my favourite outlets (web sources).</b> Create a customised 'news feed' like <a href="https://technoid99.github.io/my_news_feed/">this</a> using a <a href="https://www.github.com>Github</a> account and <a href="https://github.com/technoid99/my_news_feed">this template</a>.</li>
+                <li>* <b>I want a webpage that lists the latest news/posts from my favourite outlets (web sources).</b> Create a customised 'news feed' like <a href="https://technoid99.github.io/my_news_feed/">this</a> using a <a href="https://www.github.com">Github</a> account and <a href="https://github.com/technoid99/my_news_feed">this template</a>.</li>
             </ul>
         </div>
         
