Add security section with browser fingerprint link

--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
                 <li><a href = "https://technoid99.github.io/usefulprompts/">Useful ChatGPT prompts</a></li>
             </ul>
         </div>
+        <div class="card">
+            <h3>Security</h3>
+            <ul>
+                <li><a href = "https://technoid99.github.io/browser_fingerprint/">See your browser fingerprint</a></li>
+            </ul>
+        </div>
 
       <!--
         <div class="card">
