--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 <li><a href="https://gchq.github.io/CyberChef/">CyberChef</a></li>
                 <li><a href="https://technoid99.github.io/xlsx-to-csv-converter/convert-xlsx-to-csv.html">XLSX to CSV converter</a></li>
                 <li><a href="https://technoid99.github.io/XMLtoCSV/">XML to CSV converter</a></li>
+                <li><a href="https://technoid99.github.io/csv_joiner/">Join CSVs. Convert to GeoJSON</a></li>
             </ul>
         </div>
 
@@ -113,13 +114,15 @@
                 <li><a href = "https://technoid99.github.io/map-joiner/">Map Joiner - Make Australia and the Pacific the centre of your map</a></li>
             </ul>
         </div>
-
+<!--
         <div class="card">
             <h3>Prompt engineering</h3>
             <ul>
                 <li><a href = "https://technoid99.github.io/usefulprompts/">Useful ChatGPT prompts</a></li>
             </ul>
         </div>
+      -->
+        
         <div class="card">
             <h3>Security</h3>
             <ul>
