Revise Map Joiner link description in index.html
Updated the description of the Map Joiner link.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
         <div class="card">
             <h3>Maps</h3>
             <ul>
-                <li><a href = "https://technoid99.github.io/map-joiner/">Map Joiner - Make Australia and the Pacific the centre of your map</a></li>
+                <li><a href = "https://technoid99.github.io/map-joiner/">Map Joiner</a> - Make Australia and the Pacific the centre of your map</li>
+                <li><a href = "https://technoid99.github.io/path_highlighter/">Path segmenter tool</a></li>
             </ul>
         </div>
 <!--
